-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b32
-
x86_64
-
generic
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083379 | emb-9 | Coleen Phillimore | P2 | Resolved | Fixed | b32 |
| JDK-8212487 | 8u202 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8208872 | 8u201 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8194772 | 8u192 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8196293 | 8u191 | Kevin Walls | P2 | Resolved | Fixed | b01 |
| JDK-8201385 | 8u181 | Kevin Walls | P2 | Closed | Fixed | b02 |
| JDK-8199828 | 8u172 | Kevin Walls | P2 | Resolved | Fixed | b31 |
| JDK-8195968 | 8u162 | Kevin Walls | P2 | Closed | Fixed | b32 |
| JDK-8216691 | emb-8u201 | Kevin Walls | P2 | Resolved | Fixed | master |
| JDK-8211471 | emb-8u191 | Kevin Walls | P2 | Resolved | Fixed | master |
| JDK-8203098 | emb-8u181 | Kevin Walls | P2 | Resolved | Fixed | b02 |
nsk/jvmti/scenarios/hotswap/HS102/hs102t001
nsk/jvmti/scenarios/hotswap/HS102/hs102t002
These tests failed the following assertion:
# Internal Error (src/share/vm/runtime/handles.inline.hpp:115), pid=28652, tid=140575061673728
# assert(((Metadata*)obj)->is_valid()) failed: obj is valid
Here is the crashing stack trace:
--------------- T H R E A D ---------------
Current thread (0x00007fda9c166800): VMThread [stack: 0x00007fda2e8d8000,0x00007fda2e9d9000] [id=28667]
Stack: [0x00007fda2e8d8000,0x00007fda2e9d9000], sp=0x00007fda2e9d73c0, free space=1020k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x10717d1] VMError::report_and_die()+0x151;; VMError::report_and_die()+0x151
V [libjvm.so+0x7316cb] report_vm_error(char const*, int, char const*, char const*)+0x7b;; report_vm_error(char const*, int, char const*, char const*)+0x7b
V [libjvm.so+0x3d8e9f] methodHandle::methodHandle(Method*)+0xbf;; methodHandle::methodHandle(Method*)+0xbf
V [libjvm.so+0xd6cb11] nmethod::make_not_entrant_or_zombie(unsigned int)+0xb1;; nmethod::make_not_entrant_or_zombie(unsigned int)+0xb1
V [libjvm.so+0x66d654] CodeCache::make_marked_nmethods_zombies()+0xd4;; CodeCache::make_marked_nmethods_zombies()+0xd4
V [libjvm.so+0x101652d] Universe::flush_evol_dependents_on(instanceKlassHandle)+0xdd;; Universe::flush_evol_dependents_on(instanceKlassHandle)+0xdd
V [libjvm.so+0xbba535] VM_RedefineClasses::redefine_single_class(_jclass*, Klass*, Thread*)+0x7d5;; VM_RedefineClasses::redefine_single_class(_jclass*, Klass*, Thread*)+0x7d5
V [libjvm.so+0xbba9ec] VM_RedefineClasses::doit()+0xac;; VM_RedefineClasses::doit()+0xac
V [libjvm.so+0x109b533] VM_Operation::evaluate()+0xa3;; VM_Operation::evaluate()+0xa3
V [libjvm.so+0x1098e1e] VMThread::evaluate_operation(VM_Operation*)+0x14e;; VMThread::evaluate_operation(VM_Operation*)+0x14e
V [libjvm.so+0x1099753] VMThread::loop()+0x4b3;; VMThread::loop()+0x4b3
V [libjvm.so+0x1099981] VMThread::run()+0xb1;; VMThread::run()+0xb1
V [libjvm.so+0xdc3ab2] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
VM_Operation (0x00007fda2cc87b70): RedefineClasses, mode: safepoint, requested by thread 0x00007fda9c4c8800
- backported by
-
JDK-8083379 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8194772 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8196293 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8199828 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8203098 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8208872 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8211471 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8212487 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8216691 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Resolved
-
-
JDK-8195968 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Closed
-
-
JDK-8201385 RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid
-
- Closed
-