8057570: RedefineClasses() tests fail assert(((Metadata*)obj)->is_valid()) failed: obj is valid

Revert two small changes from the previous-versions cleanup with marking code cache.

Reviewed-by: kvn, dcubed